# raytracing_in_one_weekend

./: Cargo.toml  README.md  config.toml  default_scene.json
src/: camera.rs  color.rs  config.rs  coordinate_iterator.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  point3.rs  random.rs  ray.rs  read_scene.rs  renderer.rs  rendering.rs  scene.rs  scene_building.rs  sphere.rs  vec3.rs  world_building.rs  writing.rs
src/camera/: camera_builder.rs
src/config/: deserialization.rs  set_up.rs
src/material/: dialectric.rs  lambertian.rs  metal.rs
src/read_scene/: deserialization.rs
src/read_scene/deserialization/: to_internal_types.rs  validation.rs
src/rendering/: aabb.rs  bvh_node.rs  camera.rs  coordinate_iterator.rs  hit_detection.rs  material.rs  moving_sphere.rs  ray.rs  sphere.rs  texture.rs  vec3.rs
src/rendering/hit_detection/: aabb.rs  bvh_node.rs  hittable_list.rs
src/rendering/texture/: perlin_noise.rs
src/rendering/vec3/: color.rs  point3.rs
src/rendering/vec3/color/: premade.rs
src/scene/: validation.rs
src/vec3/: color.rs  point3.rs
src/vec3/color/: premade.rs
